[package]
name = "liteparse-wasm"
version = "0.1.0"
edition = "2021"
description = "Spatial PDF parser – wasm build for CLS Tracker"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
js-sys                = "0.3"
web-sys               = { version = "0.3", features = ["console"] }
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
serde-wasm-bindgen    = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
lopdf                 = { version = "0.34", default-features = false, features = ["pom_parser"] }

[profile.release]
opt-level = "z"
lto       = true
debug     = false
